apps/langfuse/deployment-default-langfuse-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: langfuse
    component: web
  name: langfuse-web
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: langfuse
      component: web
      managed-by: terraform
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: langfuse
        component: web
        managed-by: terraform
    spec:
      automountServiceAccountToken: true
      containers:
      - command:
        - /bin/sh
        - -ec
        args:
        - |
          [...]
        image: langfuse/langfuse
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/public/health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: langfuse-web
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/public/health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /cosi/langfuse
          name: langfuse-cosi
          readOnly: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - name: langfuse-cosi
        secret:
          secretName: langfuse-s3
