apps/langfuse/deployment-default-langfuse-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: langfuse
    component: worker
  name: langfuse-worker
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: langfuse
      component: worker
      managed-by: terraform
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: langfuse
        component: worker
        managed-by: terraform
    spec:
      automountServiceAccountToken: true
      containers:
      - command:
        - /bin/sh
        - -ec
        args:
        - |
          [...]
        image: langfuse/langfuse-worker
        imagePullPolicy: IfNotPresent
        name: langfuse-worker
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /cosi/langfuse
          name: langfuse-cosi
          readOnly: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - name: langfuse-cosi
        secret:
          secretName: langfuse-s3
