apps/langfuse/service-default-langfuse-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: langfuse
    component: web
  name: langfuse-web
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: langfuse
    component: web
    managed-by: terraform
  sessionAffinity: None
  type: ClusterIP
